--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                         <div class="hamburger-icon"></div>
                     </button>
 
-                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-sm" id="exCollapsingNavbar"><li class="nav-item"><a class="nav-link link" href="index.html#content5-2">OVERVIEW</a></li><li class="nav-item"><a class="nav-link link" href="index.html#features4-5">FEATURES</a></li><li class="nav-item"><a class="nav-link link" href="https://mobirise.com/">JOBS</a></li><li class="nav-item nav-btn"><a class="nav-link btn btn-white btn-white-outline" href="index.html#form1-b">DOWNLOAD</a></li></ul>
+                    <ul class="nav-dropdown collapse pull-xs-right nav navbar-nav navbar-toggleable-sm" id="exCollapsingNavbar"><li class="nav-item"><a class="nav-link link" href="index.html#content5-2">OVERVIEW</a></li><li class="nav-item"><a class="nav-link link" href="index.html#features4-5">FEATURES</a></li><li class="nav-item"><a class="nav-link link" href="index.html#header2-a">JOBS</a></li><li class="nav-item nav-btn"><a class="nav-link btn btn-white btn-white-outline" href="index.html#form1-b">DOWNLOAD</a></li></ul>
                     <button hidden="" class="navbar-toggler navbar-close" type="button" data-toggle="collapse" data-target="#exCollapsingNavbar">
                         <div class="close-icon"></div>
                     </button>
@@ -60,7 +60,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.co/a">free web site builder</a></section><section class="mbr-section mbr-section-hero mbr-section-full header2 mbr-after-navbar" id="header2-1" data-rv-view="2" style="background-color: rgb(65, 168, 95);">
+<section class="engine"><a href="https://mobirise.co/j">how to design a website</a></section><section class="mbr-section mbr-section-hero mbr-section-full header2 mbr-after-navbar" id="header2-1" data-rv-view="2" style="background-color: rgb(65, 168, 95);">
 
     
 
@@ -318,7 +318,7 @@
 
                     <form action="https://mobirise.com/" method="post" data-form-title="CONTACT FORM">
 
-                        <input type="hidden" value="W5jPY1x2tDrCPK1Lnrd9FbBmF8B2GtA9g4DoVuhWxxOz22Vix9k53wm6T17YU1jbj2T/c8u0MkCt+LKkuRxG0YARzuegScSgIn8JJu3Eiv/92CD6nTMZdyEHtzQPMsAx" data-form-email="true">
+                        <input type="hidden" value="ikLn015PZ+JNRA6kT196WA2LUnAspHDoHGhvC98zoaAflyLFzVaJK7p1KD97pyx4+467fvEUJEb0Lne32aC4L4I8vATA1ZCHe9m5T7JNxJe9jb1MNjKcC+DLH4eIrK8g" data-form-email="true">
 
                         <div class="row row-sm-offset">
 
