--- a/index.html
+++ b/index.html
@@ -76,10 +76,10 @@
 
                         <div class="mbr-table-cell col-md-5 content-size text-xs-center text-md-right">
 
-                            <h3 class="mbr-section-title display-2">ON DEMAND<br>TEMPS</h3>
+                            <h3 class="mbr-section-title display-2">ON DEMAND<br>LOGISTICS</h3>
 
                             <div class="mbr-section-text">
-                                <p>We are on a mission to revolutionize the way you recruit.</p>
+                                <p>We are on a mission to revolutionize the way you deliver.</p>
                             </div>
 
                             <div class="mbr-section-btn"><a class="btn btn-white" href="index.html#features4-5">MORE</a></div>
@@ -356,7 +356,7 @@
 
                     <form action="https://mobirise.com/" method="post" data-form-title="CONTACT FORM">
 
-                        <input type="hidden" value="j0C24ClqEUNmVJqq/ul7wMCSR7E6ETzBizobAaHKeDv1nSx2JpmkbfVWJuWY6pQFu2pkzvFaLeTSUTjbBDKcgHh3+1Zo4m97FsspNierZ6Rom2aJJlXu0ipOo4x/kDip" data-form-email="true">
+                        <input type="hidden" value="jAFRBBjIVt/M75Zw7NqNmNWbcr1LHuPaC44hGF7LRU7uT8xiu0ZKom9tvltJHv4gtu9c4n3Hb9K63hJZeYsQefO+4mFO81TJw2Gi/QOn+ZypN6VTBC3QFaXI8pvQrR0b" data-form-email="true">
 
                         <div class="row row-sm-offset">
 
