create github pages

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.co/g">create your own website</a></section><section class="mbr-section mbr-section-hero mbr-section-full header2 mbr-parallax-background mbr-after-navbar" id="header2-1" data-rv-view="2" style="background-image: url(assets/images/9-2000x1334.png);">
+<section class="engine"><a href="https://mobirise.co/p">bootstrap dropdown</a></section><section class="mbr-section mbr-section-hero mbr-section-full header2 mbr-parallax-background mbr-after-navbar" id="header2-1" data-rv-view="2" style="background-image: url(assets/images/9-2000x1334.png);">
 
     <div class="mbr-overlay" style="opacity: 0.8; background-color: rgb(0, 0, 0);">
     </div>
@@ -290,7 +290,7 @@
                   <h3 class="mbr-section-title display-2">Delivery 24/7 365</h3>
                   <div class="lead">
 
-                    <p>Good customer service is key so why wait around?When customers are waiting, every minute counts. Mover helps you get what you need from A to B. You can send as much or as little as you like whenever you like. </p>
+                    <p>Good customer service is key so why wait around? When customers are waiting, every minute counts. Mover helps you get what you need from A to B. You can send as much or as little as you like whenever you like. </p>
 
                   </div>
 
@@ -493,7 +493,7 @@
 
                     <form action="https://mobirise.com/" method="post" data-form-title="CONTACT FORM">
 
-                        <input type="hidden" value="gcw8VW0hrSXQEygY1JwDtN5+GrVqk6menNaiyTYpqiSMW6x6wu3snPYFeD/ie2AwdIuTu0fl/GFKHNGWCiZLfRLOmpfwHvpV2+zMEJK8r36mcBwlf4jKEo6ee6A2Rb8=" data-form-email="true">
+                        <input type="hidden" value="mfoLz/MoncSXFloDd+sFr+UGt33dKtWNlsgI9uj+ACxRwg+18X2ftLzz2hgLnlWaD1tDzJhw5qGTgbN9EMGAnS8kLcrp8om81F5RCMsauEnxooR6TGW34HwbYfp3e5/r" data-form-email="true">
 
                         <div class="row row-sm-offset">
 
@@ -541,7 +541,7 @@
 <footer class="mbr-small-footer mbr-section mbr-section-nopadding" id="footer1-c" data-rv-view="41" style="background-color: rgb(40, 50, 78); padding-top: 1.75rem; padding-bottom: 1.75rem;">
     
     <div class="container text-xs-center">
-        <p>Copyright (c) 2016 Mover App.</p>
+        <p>Copyright (c) 2017 Mover App.</p>
     </div>
 </footer>
 
