--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.co/k">bootstrap template</a></section><section class="mbr-section mbr-section-hero mbr-section-full header2 mbr-parallax-background mbr-after-navbar" id="header2-1" data-rv-view="2" style="background-image: url(assets/images/9-2000x1334.png);">
+<section class="engine"><a href="https://mobirise.co/g">how to create your own website</a></section><section class="mbr-section mbr-section-hero mbr-section-full header2 mbr-parallax-background mbr-after-navbar" id="header2-1" data-rv-view="2" style="background-image: url(assets/images/9-2000x1334.png);">
 
     <div class="mbr-overlay" style="opacity: 0.8; background-color: rgb(0, 0, 0);">
     </div>
@@ -493,7 +493,7 @@
 
                     <form action="https://mobirise.com/" method="post" data-form-title="CONTACT FORM">
 
-                        <input type="hidden" value="qbbxvECJlFUYwM1LgnpT99rxQFxx5oJNf5Cz+xd1alTYKQhVK3EZ9OhmG41dr+xFxPLz3r+UM17VuetesVI8B36mAOzG+elOZ4eVZjMJ8wu3fwGCrv3Y/dZTeHj8ynhS" data-form-email="true">
+                        <input type="hidden" value="IQSHk0dOrKtteQqt0Vyr697u/D12w0nrBGLipLcfvEvmDI5zt1/TcXQ9pchfXmf+M4U1fY3/YZ8k/WETtQhUZNYSPbSC57dru7a82KTWk3/BS4rDsTmiDbRAORpFZeMt" data-form-email="true">
 
                         <div class="row row-sm-offset">
 
