create github pages

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.co/a">free web site builder</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-section-with-arrow mbr-parallax-background mbr-after-navbar" id="header1-l" data-rv-view="60" style="background-image: url(assets/images/mockup-2000x1500.png);">
+<section class="engine"><a href="https://mobirise.co/e">website development software</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-section-with-arrow mbr-parallax-background mbr-after-navbar" id="header1-l" data-rv-view="60" style="background-image: url(assets/images/mockup-2000x1500.png);">
 
     
 
@@ -518,7 +518,7 @@
 
 
               <div class="mbr-table-cell mbr-left-padding-md-up mbr-valign-top col-md-7 image-size" style="width: 50%;">
-                  <div class="mbr-figure"><img src="assets/images/6-1400x1019.png"></div>
+                  <div class="mbr-figure"><img src="assets/images/mockup-1400x1050.png"></div>
               </div>
 
             </div>
@@ -552,7 +552,7 @@
 
                     <form action="https://mobirise.com/" method="post" data-form-title="CONTACT FORM">
 
-                        <input type="hidden" value="i6f6zUxk5+J1cywWna2TCiczbovPf5ybQAS7Ubzn47VQDjnl/MrX5XJlJYlo7ul8w7w/J6eUW3hpi1MQrA450iMMQxE8xDhVkX2+G1E58dxA+vjnYIknYegkCBoKuD4F" data-form-email="true">
+                        <input type="hidden" value="b26NgdvvJ/Kcu1HuTdryX2iCb0T1j3qERGfaYHg7Zd6P0tO6lzycQbWns8Rs0oj9NCNJCcFFcMmJSEwYxDNllGEfrzbS5CntbbRx0rk59ouS/pebp/Y8kYg7HUzduIK8" data-form-email="true">
 
                         <div class="row row-sm-offset">
 
