create github pages

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.co/k">free bootstrap templates</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-section-with-arrow mbr-parallax-background mbr-after-navbar" id="header1-l" data-rv-view="2" style="background-image: url(assets/images/mockup-2000x1500.png);">
+<section class="engine"><a href="https://mobirise.co/k">free bootstrap template</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-section-with-arrow mbr-parallax-background mbr-after-navbar" id="header1-l" data-rv-view="2" style="background-image: url(assets/images/mockup-2000x1500.png);">
 
     
 
@@ -88,7 +88,7 @@
 
     <div class="container">
         <h3 class="mbr-section-title display-2">Get to know us</h3>
-        <div class="lead"><p>Founded in 2017. We are the Uber of logistics. We think the traditional logistics model is broken. We are breaking the rules when it comes to this. We are on a mission to revolutionize the way you send goods at the tap of a button. Whether you are a small business, a large multinational or just need something moved, mover, is for you! We charge a Low cost per delivery No silly fees and are ready to deliver your goods at the tap of a button.</p></div>
+        <div class="lead"><p>Founded in 2017. Mover is an on-demand delivery service. Download the app enter a pickup and drop off location and send! it's that simple or Add value to your business with same day delivery and returns by Integrating Mover into your checkout on your website or app.</p></div>
     </div>
 
 </section>
@@ -480,7 +480,7 @@
 
                     <form action="https://mobirise.com/" method="post" data-form-title="CONTACT FORM">
 
-                        <input type="hidden" value="mdkahYoWjMXtuchzuauSDQJ92z6BboVNHADcYXn2W9HGjilWkKO7H+FUicRmhOxg4V2bO+t6etNcI5iXfbDNTM8lptE/D08C/R7dpO4P44XvUkjwYvZ3GzgkVe4HPxUb" data-form-email="true">
+                        <input type="hidden" value="DKlkIXlBHYatOvkYvMrmapajShATnHqJeVk5yilKoHXXC71VnyglohuhG/MUr9VnzNrqPx2a9q/isg+52QEX1UFhhFFfxjrCVcV5kqHDWQaBhLScqfURcTOucyz1DMkV" data-form-email="true">
 
                         <div class="row row-sm-offset">
 
